# CivicBlocks

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  schema.sql
api/: deps.py  main.py  schemas.py
api/routers/: verification.py  voters.py
scripts/: build_address_embeddings.py  demo.py  geocode_addresses.py  ingest_voter_file.py  send_verification_postcard.py  spatial_join_districts.py
